fix datgui z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,10 @@ canvas { display: block; }
     z-index: 7;
     border: 2px lightgrey solid;
 }
+
+#datguicontainer {
+    position: absolute;
+    top: 0px;
+    left: 200px;
+    z-index: 10;
+  }
